--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -105,8 +105,8 @@
                 </div> 
                 <div class="col-10">                      
                     <div id="sonar__section_block"></div>  
-                    <div id="sonar__3D_block"></div>
-                    <div id="map__bathymetry_block" style="width: 100%; height: 420px;"></div>
+                    <div id="sonar__3D_block" class="d-inline-block"></div>
+                    <div id="map__bathymetry_block" class="d-inline-block float-right"></div>
                 </div>                
             </div>  
 
@@ -429,13 +429,18 @@
                     }
 
                     //draw red RECT +_ dlat dlong in 3D-points-block in selected lat-long
-                    const radius_w_px = (2 * sonar__section_dLat) / sonar__pulse_w_offset_coef;
-                    const radius_h_px = (2 * sonar__section_dLng) / sonar__pulse_w_offset_coef;
+                    const radius_h_px = (2 * sonar__section_dLat) / sonar__pulse_w_offset_coef;
+                    const radius_w_px = (2 * sonar__section_dLng) / sonar__pulse_w_offset_coef;
                     const radius_top_px = sonar__pulses_block_h_px + sonar__getOffsetLat_px(lat) - 0.5 * radius_h_px;
                     const radius_left_px = sonar__getOffsetLng_px(lng) - 0.5 * radius_w_px;
                     let html = '<div class="sonar__section_radius" style="left:' + radius_left_px + 'px; top:' + radius_top_px + 'px; width:' + radius_w_px + 'px; height:' + radius_h_px + 'px; ">';
                     html += '</div>';
                     $('#sonar__3D_block').append(html);
+
+                    if (map__mapIsReady) {
+                        sonar__map_section_radius(lat, lng);
+                    }
+
 
                     for (let index in sonar__plane_pointsLatLng) {
                         const ll = index.split(/_/);
@@ -598,9 +603,9 @@
                     map__mapIsReady = true;
                 }
                 function sonar__map_point(lat, lng, depthM) {
-                    const color = map__getColor(depthM) + 'FF';
-                    let r = 1;
-                    let myCircle = new ymaps.Circle([
+                    const color = sonar__getColor_depth_m(depthM) + 'FF';
+                    const r = 1;
+                    const myCircle = new ymaps.Circle([
                         [lat, lng], // Координаты центра круга.            
                         r // Радиус круга в метрах.
                     ], {
@@ -615,6 +620,35 @@
                     });
                     map__map.geoObjects.add(myCircle);
                 }
+                function sonar__map_section_radius(lat, lng) {
+                    const myRectangle = new ymaps.Rectangle([
+                        // Задаем координаты диагональных углов прямоугольника.
+                        [(lat + sonar__section_dLat), (lng - sonar__section_dLng)],
+                        [(lat - sonar__section_dLat), (lng + sonar__section_dLng)]
+                    ], {
+                        //Свойства
+                        hintContent: '',
+                        balloonContent: ''
+                    }, {
+                        // Опции.
+                        // Цвет и прозрачность заливки.
+                        fillColor: '#00000000',
+                        // Дополнительная прозрачность заливки..
+                        // Итоговая прозрачность будет не #33(0.2), а 0.1(0.2*0.5).
+                        fillOpacity: 0.5,
+                        // Цвет обводки.
+                        strokeColor: '#FF0000',
+                        // Прозрачность обводки.
+                        strokeOpacity: 0.8,
+                        // Ширина линии.
+                        strokeWidth: 1,
+                        // Радиус скругления углов.
+                        // Данная опция принимается только прямоугольником.
+                        borderRadius: 0
+                    });
+                    map__map.geoObjects.add(myRectangle);
+                }
+
 
             </script>
         </main>
@@ -632,13 +666,20 @@
         border: 1px solid #003580;        
     }
 
-    #sonar__3D_block{ 
-        width: 100%; 
-        height: 420px; 
+    #sonar__3D_block{         
+        height: 600px; 
         overflow: scroll;
         position: relative;
-        border: 1px solid #003580;             
+        border: 1px solid #003580; 
+        width: 55%;
     }
+    #map__bathymetry_block{         
+        height: 600px; 
+        overflow: scroll;
+        position: relative;
+        border: 1px solid #003580; 
+        width: 44%;
+    }  
 
     .sonar__section_pulseBottom{        
         display: block;
