--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -486,7 +486,7 @@
                     const left_px = sonar__getOffsetLng_px(lng);
                     const top_px = sonar__getOffsetLat_px(lat);
 
-                    let html = '<div title="' + (Math.round((data.depthM) * 100) / 100) + 'm" class="sonar__plane_point_pulses" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; border-bottom: ' + sonar__pulse_w_px + 'px solid ' + depth_color + '; width:' + sonar__pulse_w_px + 'px; ">';
+                    let html = '<div title="' + (Math.round((data.depthM) * 100) / 100) + 'm" class="sonar__plane_point_pulses" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__pulse_w_px + 'px; ">'; //border-bottom: ' + sonar__pulse_w_px + 'px solid ' + depth_color + ';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
@@ -768,20 +768,20 @@
         float: left;        
         height: 100px; /*sonar__pulses_block_h_px*/             
         position: absolute;        
-        z-index: 500;
         transform: rotate(45deg);
         transform-origin: bottom center;
         padding: 0;
         margin: 0;
         overflow: hidden;
         z-index: 1;
+        z-index: 500;
     }
     .sonar__plane_point_pulses:hover{
         border-left: 1px solid red;
         border-right: 1px solid red;
         border-top: 1px solid red;        
         background-color: white;
-        z-index: 600;        
+        z-index: 500;      
     }
     .sonar__plane_point_pulse{     
         opacity: 0.3;
@@ -790,6 +790,7 @@
         padding: 0;
         margin: 0;
         height: 2px;
+        z-index: 500;
     }        
 
     .sonar__plane_point_dot{        
@@ -798,7 +799,8 @@
         position: absolute;
         opacity: 1;        
         padding: 0;
-        margin: 0;         
+        margin: 0;  
+        z-index: 600;
     }
 
 
